--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,45 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Revisa AI</title>
+    <link type="text/css" rel="stylesheet" href="./style.css"></link>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+        <div class="tela-inicial">
+            <div class="texto-apresentacao">
+                     <h1>REVISA AI</h1>
+               
+                <span>Revise o seu conhecimento sobre qualquer assunto</span>
+            </div>
+
+            <div class="container-input">
+                <input id="assunto" type="text" placeholder="Digite o assunto..." name="assunto" id="assunto">
+                <button id="comecar">
+                    <svg class="icone-busca" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100" height="100" viewBox="0 0 30 30">
+                        <path d="M 13 3 C 7.4889971 3 3 7.4889971 3 13 C 3 18.511003 7.4889971 23 13 23 C 15.396508 23 17.597385 22.148986 19.322266 20.736328 L 25.292969 26.707031 A 1.0001 1.0001 0 1 0 26.707031 25.292969 L 20.736328 19.322266 C 22.148986 17.597385 23 15.396508 23 13 C 23 7.4889971 18.511003 3 13 3 z M 13 5 C 17.430123 5 21 8.5698774 21 13 C 21 17.430123 17.430123 21 13 21 C 8.5698774 21 5 17.430123 5 13 C 5 8.5698774 8.5698774 5 13 5 z"></path>
+                    </svg>
+                </button>
+            </div>
+
+             <div class="configuracoes-quiz">
+                <p>Dificuldade</p>
+                <select class="dificuldade-select" id="dificuldade">
+                    <option value="easy">Fácil</option>
+                    <option value="medium">Médio</option>
+                    <option value="hard">Difícil</option>
+                </select>
+            </div>
+
+
+        </div>
+
+    <script src="./Quiz.js"></script>
+    <script src="./script.js"></script>
+
 </body>
 </html>
