feat: alterando o modelo do gemini porque eu estourei o limite do outro modelo

--- a/public/index.html
+++ b/public/index.html
@@ -33,10 +33,19 @@
                     <option value="medium">Médio</option>
                     <option value="hard">Difícil</option>
                 </select>
+
+                <div class="temporizado-container">
+                    <label>
+                        <input type="checkbox" id="temporizado">
+                            Quiz temporizado (20s por pergunta)
+                    </label>
+                </div>
+
             </div>
 
-
         </div>
+
+        <div id="toast-container"></div>
 
     <script src="./Quiz.js"></script>
     <script src="./script.js"></script>
